# cpp_ray_tracer

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Ray.h  Utils.h  Vec3.h
src/: Material.cpp  Ray.cpp  Vec3.cpp  main.cpp
